objects/Config_Support_Request__c.object
<CustomObject>
    <fields>
        <fullName>Comments__c</fullName>
        <description>Additional Information</description>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Completed_Date__c</fullName>
        <defaultValue>Today()</defaultValue>
        <description>Date when the request was completed</description>
        <label>Completed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>Request Description</description>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Environment__c</fullName>
        <description>Which Environment</description>
        <label>Environment</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Production</fullName>
                </value>
                <value>
                    <fullName>Sandbox</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Escalated__c</fullName>
        <description>Was the request Escalated?</description>
        <label>Escalated</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Functional_Area__c</fullName>
        <description>Functional Area</description>
        <label>Functional Area</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Account Management</fullName>
                    <color>#0B6FCE</color>
                    <label>Account Management</label>
                </value>
                <value>
                    <fullName>Case Management</fullName>
                    <color>#78C953</color>
                    <label>Case Management</label>
                </value>
                <value>
                    <fullName>Contact Management</fullName>
                    <color>#E27001</color>
                    <label>Contact Management</label>
                </value>
                <value>
                    <fullName>Lead Management</fullName>
                    <color>#A845DC</color>
                    <label>Lead Management</label>
                </value>
                <value>
                    <fullName>Opportunity Management</fullName>
                    <color>#F3D904</color>
                    <label>Opportunity Management</label>
                </value>
                <value>
                    <fullName>Other</fullName>
                    <color>#A53711</color>
                    <label>Other</label>
                </value>
                <value>
                    <fullName>Partner Management</fullName>
                    <color>#66E9BD</color>
                    <label>Partner Management</label>
                </value>
                <value>
                    <fullName>User Management</fullName>
                    <color>#8F6429</color>
                    <label>User Management</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Request_Category__c</fullName>
        <description>Type of request</description>
        <label>Request Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Access/Password</fullName>
                    <color>#0B6FCE</color>
                    <label>Access/Password</label>
                </value>
                <value>
                    <fullName>Data Update</fullName>
                    <color>#78C953</color>
                    <label>Data Update</label>
                </value>
                <value>
                    <fullName>Data Upload</fullName>
                    <color>#E27001</color>
                    <label>Data Upload</label>
                </value>
                <value>
                    <fullName>Bug</fullName>
                    <color>#A845DC</color>
                    <label>Bug</label>
                </value>
                <value>
                    <fullName>POC Support</fullName>
                    <color>#F3D904</color>
                    <label>POC Support</label>
                </value>
                <value>
                    <fullName>Inquiry/Question</fullName>
                    <color>#A53711</color>
                    <label>Inquiry/Question</label>
                </value>
                <value>
                    <fullName>Release Support</fullName>
                    <color>#66E9BD</color>
                    <label>Release Support</label>
                </value>
                <value>
                    <fullName>Reports</fullName>
                    <color>#0B24BE</color>
                    <label>Reports</label>
                </value>
                <value>
                    <fullName>Setup</fullName>
                    <color>#419249</color>
                    <label>Setup</label>
                </value>
                <value>
                    <fullName>User Admin</fullName>
                    <color>#8F6429</color>
                    <label>User Admin</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Request_Count__c</fullName>
        <defaultValue>1</defaultValue>
        <description>Used for reporting</description>
        <label>Request Count</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Request_Source__c</fullName>
        <description>Source of the Request</description>
        <label>Request Source</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Email</fullName>
                    <default>true</default>
                    <label>Email</label>
                </value>
                <value>
                    <fullName>Incident</fullName>
                </value>
                <value>
                    <fullName>Internal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Request_Status__c</fullName>
        <description>Status of request</description>
        <label>Request Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                    <default>true</default>
                    <label>Open</label>
                </value>
                <value>
                    <fullName>In-Progress</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Requested_Date__c</fullName>
        <defaultValue>Today()</defaultValue>
        <description>Date when the request was made</description>
        <label>Requested Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Time_Spent__c</fullName>
        <inlineHelpText>Time Spent on Hours</inlineHelpText>
        <label>Time Spent</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <description>Used to track SFDC Configuration Team Activities</description>
    <label>Config Support Request</label>
    <nameField>
        <displayFormat>SR-{0}</displayFormat>
        <label>Config Task Tracking Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Config Support Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>